--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -29,18 +29,43 @@
 
   --radius-1: 0.25rem;
   --container: 45rem;
-}
 
+  --background-button: url(../assets/img/moon.png);
+}
+.darkmode{
+  --color-brand-1:#9747ff;
+  --color-grey-9: #15171a;
+  --color-grey-8: #212529;
+  --color-grey-7: #2b2f33;
+  --color-grey-6: #868e96;
+  --color-grey-5: #adb5bd;
+  --color-grey-4: #ced4da;
+  --color-grey-3: #dee2e6;
+  --color-grey-2: #f1f3f5;
+  --color-grey-1: #f8f9fa;
+  --color-grey-0: #fdfeff;
+
+  --color-disable-fixed: #212529;
+  --color-actived-fixed: #2b2f33;
+
+  --background-button: url(../assets/img/sun.png);
+}
 body {
   font-family: "Inter", sans-serif;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   background-color: var(--color-grey-9);
+ 
 }
-
 .container {
   width: var(--container);
   max-width: 100%;
   padding: 0 1rem;
   margin: 0 auto;
+  margin-top: 3.875rem;
+  margin-bottom: 3.875rem;
+  
+}
+ul{
+  list-style: none;
 }
